stylesheets: Fix overflowing body: Replace margin with padding.

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -54,10 +54,10 @@ h2 {
   display: block;
 }
 #top-menu.fixed + #frontpage-info {
-  margin-top: 75px;
+  padding-top: 125px;
 }
 #top-menu.fixed.submenu + .grid {
-  margin-top: 100px;
+  padding-top: 150px;
 }
 .ui.secondary.pointing.menu.fixed {
   z-index: 100;
@@ -133,7 +133,7 @@ h2 {
 }
 
 .ui.page.grid {
-  margin-top: 50px;
+  padding-top: 50px;
 }
 
 
